--- a/reference_system/package.xml
+++ b/reference_system/package.xml
@@ -15,6 +15,7 @@
   <depend>rclcpp</depend>
   <depend>reference_interfaces</depend>
   <depend>rcl_interfaces</depend>
+  <depend>tracetools</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
